--- a/.github/actions/build-ffmpeg/action.yaml
+++ b/.github/actions/build-ffmpeg/action.yaml
@@ -8,6 +8,10 @@ inputs:
     description: Build type (shared or static libraries)
     required: false
     default: static
+  profile:
+    description: Hardware profile tuning (e.g. zen3, tigerlake)
+    required: false
+    default: ""
   config:
     description: Build configuration
     required: false
@@ -50,7 +54,7 @@ runs:
           !${{ inputs.workingDirectory }}/*_build_temp/*.zip
           !${{ inputs.workingDirectory }}/*_build_temp/FFmpeg*
           !${{ inputs.workingDirectory }}/*_build_temp/x264-*-shared/
-        key: ${{ inputs.target }}-ffmpeg-deps-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
+        key: ${{ inputs.target }}-${{ inputs.profile }}-ffmpeg-deps-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
 
     - name: Build and Install FFmpeg Dependencies
       if: runner.os == 'macOS' && steps.ffmpeg-deps-cache.outputs.cache-hit != 'true'
@@ -72,6 +76,9 @@ runs:
           Shared = $(if ( '${{ inputs.type }}' -eq 'shared' ) { $true } else { $false })
           Dependencies = (Get-ChildItem deps.ffmpeg -filter '*.ps1' | Where-Object { $_.Name -ne '99-ffmpeg.ps1' } | ForEach-Object { $_.Name -replace "[0-9]+-(.+).ps1",'$1' })
         }
+        if ('${{ inputs.profile }}') {
+          $BuildArgs['Profile'] = '${{ inputs.profile }}'
+        }
 
         ./Build-Dependencies.ps1 @BuildArgs
 
@@ -82,7 +89,7 @@ runs:
         path: |
           ${{ github.workspace }}/*_build_temp/FFmpeg*/*
           !${{ github.workspace }}/*_build_temp/FFmpeg*/.git
-        key: ${{ inputs.target }}-ffmpeg-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
+        key: ${{ inputs.target }}-${{ inputs.profile }}-ffmpeg-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
 
     - name: Build and Install FFmpeg
       if: runner.os == 'macOS'
@@ -114,6 +121,9 @@ runs:
           SkipBuild = $(if ( '${{ steps.ffmpeg-cache.outputs.cache-hit }}' -eq 'true' ) { $true } else { $false })
           SkipUnpack = $(if ( '${{ steps.ffmpeg-cache.outputs.cache-hit }}' -eq 'true' ) { $true } else { $false })
         }
+        if ('${{ inputs.profile }}') {
+          $BuildArgs['Profile'] = '${{ inputs.profile }}'
+        }
 
         ./Build-Dependencies.ps1 @BuildArgs
 
@@ -124,7 +134,7 @@ runs:
         path: |
           ${{ github.workspace }}/*_build_temp/FFmpeg*/*
           !${{ github.workspace }}/*_build_temp/FFmpeg*/.git
-        key: ${{ inputs.target }}-ffmpeg-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
+        key: ${{ inputs.target }}-${{ inputs.profile }}-ffmpeg-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
 
     - name: Save FFmpeg Dependencies to Cache
       if: github.event_name == 'schedule' || (github.event_name == 'push' && steps.ffmpeg-deps-cache.outputs.cache-hit != 'true')
@@ -138,4 +148,4 @@ runs:
           !${{ inputs.workingDirectory }}/*_build_temp/*.zip
           !${{ inputs.workingDirectory }}/*_build_temp/FFmpeg*
           !${{ inputs.workingDirectory }}/*_build_temp/x264-*-shared/
-        key: ${{ inputs.target }}-ffmpeg-deps-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
+        key: ${{ inputs.target }}-${{ inputs.profile }}-ffmpeg-deps-${{ inputs.type }}-${{ inputs.config }}-${{ steps.env-setup.outputs.hash }}
